--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^0.26.1",
     "react": "17.0.2",
     "react-native": "0.68.0",
+    "react-native-config": "^1.4.5",
     "react-native-gesture-handler": "^2.3.2",
     "react-native-image-blur-loading": "^1.1.6",
     "react-native-safe-area-context": "^4.2.4",
